syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.metaloom.loom.proto";
option java_outer_classname = "AssetProto";
option objc_class_prefix = "HLW";

package asset;

// The asset loader service definition.
service AssetLoader {
  // Store asset
  rpc Store (AssetRequest) returns (AssetResponse) {}
  
  // Load asset
  rpc Load (AssetRequest) returns (AssetResponse) {}
}

// The request for the asset
message AssetRequest {
  string sha512sum = 1;
  string path = 2;
  uint64 size = 3;
  string sha256sum = 4;
  string fingerprint = 5;
  string chunkHash = 6;
  uint64 zeroChunkCount = 7;
}

// The response for the asset
message AssetResponse {
  string sha512sum = 1;
  string sha256sum = 2;
  string fingerprint = 3;
  string chunkHash = 4;
  uint64 zeroChunkCount = 5;
}